[tool.poetry]
authors = ["Groundlight AI <support@groundlight.ai>"]
description = "Build computer vision systems using natural language with Groundlight"
homepage = "https://code.groundlight.ai/python-sdk"
license = "MIT"
name = "groundlight"
packages = [
    {include = "**/*.py", from = "generated"},
    {include = "**/*.py", from = "src"},
]
readme = "README.md"
version = "0.15.1"

[tool.poetry.dependencies]
# For certifi, use ">=" instead of "^" since it upgrades its "major version" every year, not really following semver
certifi = ">=2023.7.22"
frozendict = "^2.3.2"
pillow = ">=9.0.0" # TODO: We may want to mark pillow (and numpy) as extra (https://python-poetry.org/docs/master/pyproject#extras)
pydantic = ">=1.7.4,<3.0.0"
python = ">=3.7,<4.0"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
typer = "^0.9.0"
urllib3 = "^1.26.9"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.22.1"
pre-commit = "^2.0.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-markdown-docs = "^0.4.3"
pytest-mock = "^3.10.0"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.0.0"
ruff = "^0.0.261"
toml-sort = "^0.23.0"
types-requests = "^2.28.11.17"

[tool.poetry.group.sphinx-deps.dependencies]
# These are extra / stricter dependencies required to build the API reference docs
Sphinx = {version = "7.2.6", python = ">=3.9.0,<4.0"}
autodoc-pydantic = {version = "2.0.1", python = ">=3.9.0,<4.0"}
pillow = "^9.0.0"
pydantic = "^2.0"
python = ">=3.9.0,<4.0"
python-dateutil = "^2.8.2"
sphinx-rtd-theme = {version = "1.3.0", python = ">=3.9.0,<4.0"}
toml = "0.10.2"

[tool.poetry.scripts]
groundlight = "groundlight.cli:groundlight"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 120
preview = true
target-version = ["py37"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
ignore_missing_imports = true
python_version = "3.7"

# https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
[tool.ruff]
exclude = ["__init__.py"]
line-length = 120
select = ["E", "F", "I", "N", "PL"] # shorthand names for plugins
target-version = "py37"

# https://toml-sort.readthedocs.io/en/latest/#configuration-file
[tool.tomlsort]
no_sort_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.2.0"]
